--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - "5335:5335"
     command: >
       /bin/bash -c "npm install
+      && curl -fsSL https://bun.sh/install | bash
+      && source /root/.bashrc
       && bun run index.ts"
     volumes:
       - .:/home/node/client
